// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Journal Name Component test  should render closed access 1`] = `
<div>
  <span
    class="noOaIcon"
    data-testid="no-oa-icon"
  />
</div>
`;

exports[`Journal Name Component test  should render embargoed 1`] = `
<div>
  <span
    class="MuiBadge-root css-1c32n2y-MuiBadge-root"
  >
    <span
      aria-label="Link (no DOI) - Open access after 2019-01-01"
      class="fez-icon openAccessEmbargoed large"
      data-mui-internal-clone-element="true"
      data-testid="open-access-embargoed"
      role="img"
    />
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-pr6g7e-MuiBadge-badge"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall OpenAccessIcon-embargoedBadgeStyle-6 css-ptiqhd-MuiSvgIcon-root"
        data-testid="AccessTimeIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Journal Name Component test  should render embargoed 2`] = `
<div>
  <span
    class="is-hidden-mobile is-hidden-tablet-only"
  >
    Open access after 2019-01-01 
  </span>
  <span
    class="MuiBadge-root css-1c32n2y-MuiBadge-root"
  >
    <span
      aria-label="Link (no DOI) - Open access after 2019-01-01"
      class="fez-icon openAccessEmbargoed large"
      data-mui-internal-clone-element="true"
      data-testid="open-access-embargoed"
      role="img"
    />
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-pr6g7e-MuiBadge-badge"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall OpenAccessIcon-embargoedBadgeStyle-10 css-ptiqhd-MuiSvgIcon-root"
        data-testid="AccessTimeIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Journal Name Component test  should render locked 1`] = `
<div>
  <span
    aria-label="You do not have access to this file"
    class="MuiBadge-root css-1c32n2y-MuiBadge-root"
    data-mui-internal-clone-element="true"
  >
    <span
      aria-label="You do not have access to this file"
      class="fez-icon openAccessLocked large"
      role="img"
    />
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-pr6g7e-MuiBadge-badge"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeSmall OpenAccessIcon-badgeStyle-11 css-enuydp-MuiSvgIcon-root"
        data-testid="LockIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Journal Name Component test  should render no icon 1`] = `
<div>
  <span
    class="noOaIcon"
    data-testid="no-oa-icon"
  />
</div>
`;

exports[`Journal Name Component test  should render open access 1`] = `
<div>
  <span
    aria-label="Open Access - undefined - Free to read"
    class="fez-icon openAccess large"
    data-mui-internal-clone-element="true"
    data-testid="open-access"
    role="img"
  />
</div>
`;

exports[`Journal Name Component test  should render open access with OPEN_ACCESS_ID_LINK_NO_DOI 1`] = `
<div>
  <span
    aria-label="Open Access - Free to read"
    class="fez-icon openAccess large"
    data-mui-internal-clone-element="true"
    data-testid="open-access"
    role="img"
  />
</div>
`;
